Closed
Bug 1222083
Opened 10 years ago
Closed 10 years ago
mochitest dom/media/test/test_bug879717.html fails with: Assertion failure: mSkiaGlue->GetGrContext() (No GrContext)
Categories
(Core :: Graphics: Canvas2D, defect)
Core
Graphics: Canvas2D
Tracking
()
RESOLVED
FIXED
mozilla45
| Tracking | Status | |
|---|---|---|
| firefox45 | --- | fixed |
People
(Reporter: lsalzman, Assigned: lsalzman)
References
Details
Attachments
(1 file)
The Canvas 2D code has an optimization where it tries to switch the rendering mode from software to OpenGL is a sufficient number of certain operations are used. Once this happens, drawImage does adequately check if there is an available GL context before trying to use it. The result is that the mochitest dom/media/test/test_bug879717.html (and probably several others) fail.
The problem originated with bug 880114.
| Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8683755 -
Flags: review?(jmuizelaar)
Updated•10 years ago
|
Attachment #8683755 -
Flags: review?(jmuizelaar) → review+
| Assignee | ||
Comment 2•10 years ago
|
||
Keywords: checkin-needed
Keywords: checkin-needed
Comment 4•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in
before you can comment on or make changes to this bug.
Description
•